--- a/stock-app/.env
+++ b/stock-app/.env
@@ -1,2 +1,6 @@
-REACT_APP_API_KEY = oGdkYLyE5Tae8938odskc5krmaINNY9c5t3RfRH5
 
+# open this site https://financeapi.net/ and get your api key
+# uncomment the below statement and paste your api key to get it working 
+# happy coding!
+
+#REACT_APP_API_KEY =
