--- a/stock-app/package.json
+++ b/stock-app/package.json
@@ -10,7 +10,9 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "react": "^18.2.0",
